# llmsys_f25_hw5

./: .gitignore  PROBLEM_1_3_README.md  README.md  demo.ipynb  modal_run.py  modal_run_pipeline.py  problem_1_3_analysis.py  problem_1_3_notebook.ipynb  pyproject.toml  requirements.txt
data_parallel/: dataset.py
pipeline/: model.py  model_parallel.py  partition.py  pipe.py  worker.py
project/: run_data_parallel.py  run_pipeline.py  utils.py
submit/: PROBLEM_1_3_SUMMARY.md
tests/: test_pipeline_MPS.py
