[project]
name = "llmsys-f25-hw5"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets>=4.4.0",
    "ipykernel>=7.1.0",
    "modal>=1.2.1",
    "numpy>=2.3.4",
    "pyarrow>=22.0.0",
    "pytest>=8.4.2",
    "transformers>=4.57.1",
]
