[project]
name = "llmsys-f25-hw5"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click>=8.3.0",
    "datasets<4.0.0",
    "embeddings==0.0.8",
    "ipykernel>=7.1.0",
    "matplotlib>=3.10.7",
    "modal>=1.2.1",
    "numpy>=2.3.4",
    "pandas>=2.3.3",
    "pyarrow>=22.0.0",
    "pytest>=8.4.2",
    "rich>=14.2.0",
    "sacrebleu==2.4.0",
    "shellingham>=1.5.4",
    "torch==2.2.0",
    "transformers==4.37.2",
    "typer>=0.20.0",
]
